upgrade sb 4.0.0 (#127)
* upgrade sb 4.0.0

* add restclient dep

* use jspecify nullable

* ref

* rm deprecated class

* ref

* upgrade spring cloud version

* use RestTestClient

* use RestTestClient

* upgrade

* fix NPE

* fix jdk 24 bugs

* update ci

* upgrade springdocBridgeVersion=0.5.0