@@ -43,6 +43,7 @@ allprojects {
     }
 
     repositories {
+        mavenLocal()
         mavenCentral()
         maven { url = "https://repo.spring.io/snapshot" }
         maven { url = "https://repo.spring.io/milestone" }
@@ -60,10 +61,8 @@ allprojects {
     test {
         systemProperties("spring.cloud.compatibility-verifier.enabled": "false")
         useJUnitPlatform()
-        dependencies {
-            // https://docs.gradle.org/current/userguide/upgrading_version_8.html#test_framework_implementation_dependencies
-            testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-        }
+
+        jvmArgs("-XX:+EnableDynamicAgentLoading")
     }
 
     afterEvaluate {
@@ -88,6 +87,8 @@ allprojects {
         testCompileOnly("org.projectlombok:lombok")
         testAnnotationProcessor("org.projectlombok:lombok")
         compileOnly("com.github.spotbugs:spotbugs-annotations:${spotbugsAnnotationsVersion}")
+        // https://docs.gradle.org/current/userguide/upgrading_version_8.html#test_framework_implementation_dependencies
+        testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     }
 
     // spotless
